--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,10 +9,18 @@ workflows:
             branches:
               only:
                 - main
+     - deploy:
+          filters:
+            branches:
+              only:
+                - main
+          requires:
+            - build
+          
 
 jobs:
   build:
-    working_directory: ~/SimpleApplication
+    working_directory: ~/c/Users/Adanna/Downloads/SimpleApplication
     docker:
       - image: circleci/node:10.16.3
     steps:
