--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ workflows:
 
 jobs:
   build:
-    working_directory: ~/c/Users/Adanna/Downloads/SimpleApplication
+    working_directory: ~/c/Users/Adanna/Downloads/SimpleApplication/
     docker:
       - image: cimg/node:12.16
     steps:
@@ -44,4 +44,4 @@ jobs:
     steps:
       - run:
           name: deploy-application
-          command: ssh -o StrictHostKeyChecking=no $EC2_LILIAN@$EC2_PUBLIC_DNS"rm -rf SimpleApplicationApplication/;git clone https://github.com/DEVOPSECC/SimpleApplication.git; source SimpleApplication/deploy.sh"          
+          command: ssh -o StrictHostKeyChecking=no $EC2_LILIAN@$EC2_PUBLIC_DNS"rm -rf SimpleApplication/;git clone https://github.com/DEVOPSECC/SimpleApplication.git; source SimpleApplication/deploy.sh"          
